[gd_scene load_steps=11 format=3 uid="uid://cseeelx4ymkmm"]

[ext_resource type="Script" path="res://Collectables/collectable.gd" id="1_lbqsw"]
[ext_resource type="Texture2D" uid="uid://cakwqxt6ffxh3" path="res://Assets/GUI/Inventory/Collectable/collect_key.png" id="2_62reh"]
[ext_resource type="Texture2D" uid="uid://dl4ml73v7034e" path="res://Assets/Entities/shadow.png" id="3_r7nox"]

[sub_resource type="CircleShape2D" id="CircleShape2D_72cf0"]
resource_local_to_scene = true

[sub_resource type="Animation" id="Animation_na4k7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollectKey:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.7, 0.7)]
}

[sub_resource type="Animation" id="Animation_arbec"]
resource_name = "float"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, -2), Vector2(2.08165e-12, 2), Vector2(2.08165e-12, -2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollectKey:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -2), Vector2(0, 2), Vector2(0, -2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.7, 0.7), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d08tw"]
_data = {
"RESET": SubResource("Animation_na4k7"),
"float": SubResource("Animation_arbec")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_as2ib"]
animation = &"float"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lwuwe"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_scg1y"]
states/Start/position = Vector2(200, 100.25)
states/float/node = SubResource("AnimationNodeAnimation_as2ib")
states/float/position = Vector2(324.5, 62.5)
transitions = ["Start", "float", SubResource("AnimationNodeStateMachineTransition_lwuwe")]

[node name="Collectable" type="Area2D"]
y_sort_enabled = true
collision_layer = 129
script = ExtResource("1_lbqsw")

[node name="CollectionCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_72cf0")

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 10)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_r7nox")

[node name="ItemSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
offset = Vector2(2.08165e-12, -5)

[node name="CollectKey" type="Sprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(0, -34)
texture = ExtResource("2_62reh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d08tw")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_scg1y")
anim_player = NodePath("../AnimationPlayer")
active = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
